--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,9 @@
     <div class="wrapper">
         {%- assign default_paths = site.pages | map: "path" -%}
         {%- assign page_paths = site.header_pages | default: default_paths -%}
-        <p class="site-title title-remple">{{ site.title | escape }}</p>
+        <p class="site-title title-remple">
+            {{ site.title | escape }}
+            <a class="nav-item" target="_blank" href="{{ site.resume_url }}">Resume</a>
+        </p>
     </div>
 </header>
