Added missing links in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,7 @@
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/css/main.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/css/remple.css" | relative_url }}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
