--- a/css/remple.css
+++ b/css/remple.css
@@ -52,14 +52,16 @@ h1, h2, h3, h4, h5, h6 {
 
 .contact a {
     color: white;
-    font-size: large;
+    font-size: medium;
     border-radius: 50%;
-    padding: 0.5em;
+    padding: 10px;
+    width: 25px;
+    text-align: center;
     background-color: black;
 }
   
 .contact-item {
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 @media (max-width: 850px) {
