--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href="favicon.ico">
+
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/css/main.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/css/remple.css" | relative_url }}">
