--- a/css/remple.css
+++ b/css/remple.css
@@ -5,6 +5,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
+hr {
+    border: 1px solid #8c8c89;
+}
+
 .site-header {
     border-top: 0px;
     border-bottom: 2px dashed #cccccc;
